editor.css
@font-face {
	font-family: 'inconsolata';
	src: url('files/inconsolata.woff') format('woff');
	font-weight: normal;
	font-style: normal;
}

body {
	margin: 0px;
	overflow: hidden;
}

.button {
	font-family: Arial;
	font-size: 10px;
	text-transform: uppercase;
	text-decoration: none;

	color: rgba(0,0,0,0.5);
	border: 1px solid rgba(0,0,0,0.25);
	background-color: rgba(0,0,0,0);

	margin: 2px;
	padding: 8px 10px;

	cursor: pointer;
}

.button:hover {
	color: rgba(255,255,255,0.75);
	background-color: rgba(0,0,0,0.75);
}

input {
	cursor: pointer;
}

.dialog label {
	font-family: Arial;
	font-size: 10px;
	text-transform: uppercase;
	text-decoration: none;
	color: rgba(0,0,0,0.5);
}

.dialog input[type=text] {
	border: 3px solid rgba(0,0,0,0.25);
}

.dialog a {
	font-family: Arial;
	font-size: 12px;
	color: rgba(0,0,0,0.5);
}

.cancel {
  margin: 2px;
  text-align: right;
}

ul.menu {
  margin: 0px;
  padding: 5px;
	border: 1px solid rgba(0,0,0,0.25);

	font-family: Arial;
	font-size: 12px;
	text-transform: uppercase;
	text-decoration: none;

	color: rgba(0,0,0,0.5);
	background-color: rgba(0,0,0,0);
}

ul.menu li {
  display: block;
  padding: 4px;

	cursor: pointer;
}


/**/

.CodeMirror {
	font-family: inconsolata;
	background-color: rgba(255,255,255,0.75);
}

.CodeMirror-scroll {
	height: 100%;
}

div.CodeMirror-selected {
	background: rgba(0,0,0,0.1);
}
.CodeMirror-focused div.CodeMirror-selected {
	background: rgba(0,0,255,0.1);
}

